<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoveOn</string>
    <string name="action_point">Ajouter point</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Connexion à MoveOn</string>
    <string name="title_activity_register">Inscription à MoveOn</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_profil">ProfilActivity</string>
    <string name="title_activity_view_profil">ViewProfilActivity</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="drawer_array">
        <item>Map</item>
        <item>Profil</item>
        <item>Creation de Cercle</item>
        <item>Amis</item>
        <item>Demandes</item>
        <item>Paramètres</item>
        <item>Item 8</item>
    </string-array>

    <string-array name="test_friend_picker">
        <item>Ami 1</item>
        <item>Ami 2</item>
        <item>Ami 3</item>
        <item>Ami 4</item>
        <item>Ami 5</item>
        <item>Ami 6</item>
        <item>Ami 7</item>
        <item>Ami 8</item>
        <item>Ami 9</item>
        <item>Ami 10</item>
        <item>Ami 11</item>
        <item>Ami 12</item>
        <item>Ami 13</item>
    </string-array>

    <string name="friend_picker_title">Ajouter Participants</string>
    <string name="ok">ok</string>
    <string name="cancel">Cancel</string>
    <string name="tab_info_cercle">Infos Cercle</string>
    <string name="tab_list_cercle">Liste Cercle</string>
    <string name="tab_list_message">Messages</string>
    
    <string name="pref_sync">Notifications</string>
    <string name="pref_sync_summ">Permet de ne plus recevoir de notification.</string>

    <string name="pref_loc">Montrer sa position</string>
    <string name="pref_loc_summ">Permet de montrer sa position aux autres.</string>

    <string name="pref_refresh">Taux de rafraichissement</string>
    <string name="pref_refresh_summ">Permet de mettre à jour plus ou moins souvent ses notifications.</string>

    <string name="pref_sync_key" >PREF_SYNC_KEY</string>
    <string name="pref_loc_key" >PREF_LOC_KEY</string>
    <string name="pref_freq_key" >PREF_FREQ_KEY</string>

</resources>
