<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:id="@+id/pref_sync"
        android:key="@string/pref_sync_key"
        android:title="@string/pref_sync"
        android:summary="@string/pref_sync_summ"
        android:defaultValue="true" />

    <SwitchPreference
        android:id="@+id/pref_loc"
        android:key="@string/pref_loc_key"
        android:title="@string/pref_loc"
        android:summary="@string/pref_loc_summ"
        android:defaultValue="true" />

    <ListPreference
        android:id="@+id/pref_freq"
        android:defaultValue="15"
        android:entries="@array/notificationFrequency"
        android:entryValues="@array/notificationFrequencyValues"
        android:key="@string/pref_freq_key"
        android:summary="@string/pref_refresh_summ"
        android:title="@string/pref_refresh" />

</PreferenceScreen>